fixed whitespace with height: 100vh to .DayTime

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
     background-repeat: no-repeat;
     font-family: Roboto, sans-serif;
     padding: 1em;    
- 
+    min-height: 100vh;
     
 }
 
